--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,9 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
       with:
-        args: set image --record deployment/my-app container=${{ github.repository
-          }}:${{ github.sha }}
+        args: apply bot.yaml
     - name: verify deployment
-      uses: qazz92/kubectl@1.0.3
+      uses: qazz92/kubectl@1.19.6
       env:
         kube_confg_data: ${{ secrets.KUBE_CONFIG_DATA }}
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
