--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
       with:
-        args: apply bot.yaml
+        manifests: bot.yaml
     - name: verify deployment
       uses: qazz92/kubectl@1.0.3
       env:
