--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
       with:
+        args: set image --record deployment/my-app container=${{ github.repository
+          }}:${{ github.sha }}
         manifests: bot.yaml
     - name: verify deployment
       uses: qazz92/kubectl@1.0.3
